--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -16,6 +16,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
+    - name: Prepare
+      run: sudo apt install librust-alsa-sys-dev
     - name: Build
       run: cargo build --verbose
     - name: Run tests
@@ -27,5 +29,7 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
+    - name: Prepare
+      run: sudo apt install librust-alsa-sys-dev
     - name: Build docs
       run: cargo rustdoc --lib
